# design-system-guardian

./: .ds_guardian_session.json  .gitignore  LICENSE  README.md  audit.md  main.py  pyproject.toml  requirements.txt  rules.md  tool.py
css_tool/: __init__.py  checker.py  cli.py  workflow.py
css_tool/ai/: client.py  optimizer.py  refactorer.py
css_tool/core/: rules.py  session.py  writer.py
css_tool/ui/: components.py  pager.py  review.py  splash.py
ds_guardian/: __init__.py  checker.py  cli.py  configure.py  extract_workflow.py  info.py  workflow.py
ds_guardian/ai/: anthropic_client.py  client.py  config.py  extraction_refactorer.py  gemini_client.py  openai_client.py  optimizer.py  refactorer.py
ds_guardian/core/: extractor.py  rules.py  scanner.py  session.py  writer.py
ds_guardian/ui/: diff.py  extraction_review.py  pager.py  review.py  side_by_side.py  splash.py
